fix: remove big gap on phone

--- a/projects/mtd/src/styles.scss
+++ b/projects/mtd/src/styles.scss
@@ -127,9 +127,9 @@
   }
 }
 
-@media (max-width: map-get($grid-breakpoints, sm)) {
+@media (max-width: map-get($angular-breakpoints, laptop)) {
   .background {
-    padding: 40px 0 0 0;
+    padding: 1em 0 0 0;
 
     h1 {
       line-height: 1em;
